--- a/DS4003-hw4.ipynb
+++ b/DS4003-hw4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,9 @@
     "from dash.dependencies import Input, Output  # Make sure to import Input and Output\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"styles/mains.css\">')\n",
     "\n",
     "#get dataset\n",
-    "df = pd.read_csv('/Users/dor.frechter/Desktop/DS4003/A4_student/gdp_pcap.csv')\n",
+    "df = pd.read_csv('gdp_pcap.csv')\n",
     "yearList= []\n",
     "unique_countries = df['country'].unique()\n",
     "for i in range(1800,2101): #get a list of all the years\n",
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "im here\n",
       "Dash app running on http://127.0.0.1:8050/\n"
      ]
     },
