--- a/DS4003-hw4.ipynb
+++ b/DS4003-hw4.ipynb
@@ -9,7 +9,6 @@
     "# import dependencies\n",
     "\n",
     "from dash import Dash, html, dcc\n",
-    "from IPython.display import HTML\n",
     "from dash.dependencies import Input, Output  # Make sure to import Input and Output\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
@@ -137,7 +136,7 @@
     "\n",
     "\n",
     "if __name__ == '__main__': #run the app\n",
-    "    app.run(jupyter_mode='tab', debug=True)"
+    "   app.run_server(debug=True)"
    ]
   }
  ],
