--- a/DS4003-hw4.ipynb
+++ b/DS4003-hw4.ipynb
@@ -45,21 +45,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash app running on http://127.0.0.1:8050/\n"
-     ]
-    },
-    {
      "data": {
-      "application/javascript": "window.open('http://127.0.0.1:8050/')",
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.lib.display.IFrame at 0x1356c0dc0>"
       ]
      },
      "metadata": {},
@@ -69,6 +73,7 @@
    "source": [
     "\n",
     "app = Dash(__name__)\n",
+    "server = app.server  # Expose the server variable for Heroku\n",
     "\n",
     "bounds = getBounds()\n",
     "app.layout = html.Div([\n",
@@ -136,7 +141,7 @@
     "\n",
     "\n",
     "if __name__ == '__main__': #run the app\n",
-    "   app.run_server(debug=True)"
+    "    app.run_server(debug=True)"
    ]
   }
  ],
